# vibefs

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  DEV_SETUP.md  HOST_SETUP_VERIFIED.md  LICENSE  LINUX_PORT_SUMMARY.md  README.md  RELEASING.md  TEST_RESULTS.md  TODO.md  VIBEFS_WORKFLOW.md  build.rs  install.sh  spec.eric_local.md  spec_v0.md
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
dev_scripts/: README.md  bump.sh  install.sh  install_mac.sh  mock-agent  release.sh  test-local.sh  test_quick.sh  test_workflow_linux.sh  test_workflow_mac.sh
docs/: DIRTY_TRACKING_DESIGN.md  FILE_STATE_MATRIX.md  TUI_ROUGH_EDGES.md  architecture.md  data-model.md  nfs-setup.md
feats/: bug_v0.2.0.md  bug_v0.2.5_debug.md  bug_v0.2.8.md  bug_v0.2.9_debug.md  bug_v0.5.1_daemon_status.md  bug_v0.5.2_folder_structure_in_nfs.md  bug_v0.5.5_daemon_tmp_directory.md  bug_v0.5.6_rocksdb_lock_contention.md  bug_v0.5.7_daemon_stop_global.md  bug_v0.5.8_launch_wrong_directory.md  bug_v0.5.9_spawn_without_init_message.md  bug_v0.6.1.md  feat_safeguard_against_vibe_in_non_git.md  feat_v0.1.1_bootstrap_repos.md  feat_v0.1.2_simply_install.md  feat_v0.2.7_ergonomics.md  feat_v0.2_modern_fs_macosx.md  feat_v0.5.0.md  feat_v1.0.0.md  research_macos_fskit_2026.md  user_stories.md  workflow_test_results_v0.5.md
src/: cwd_validation.rs  daemon_client.rs  gitignore.rs  lib.rs  main.rs  names.rs  platform.rs
src/commands/: close.rs  commit.rs  diff.rs  init.rs  inspect.rs  launch.rs  mod.rs  promote.rs  purge.rs  rebase.rs  restore.rs  snapshot.rs  spawn.rs  status.rs
src/db/: mod.rs
src/git/: mod.rs  mod_gitoxide.rs.bak
src/nfs/: mod.rs
src/tui/: mod.rs
tests/: daemon_scenarios.sh  integration_tests.rs  workflow_tests.sh
