[package]
name = "vibefs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Git operations
gix = "0.63"

# Database
rocksdb = "0.22"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# NFS server
nfsserve = "0.10"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"

[[bin]]
name = "vibe"
path = "src/main.rs"
