[package]
name = "vibefs"
version = "0.9.3"
edition = "2021"
description = "Virtual filesystem for parallel AI agent workspaces, backed by Git and NFS"
license = "MIT"
repository = "https://github.com/getaifs/vibefs"
homepage = "https://github.com/getaifs/vibefs"
readme = "README.md"

[dependencies]
# Git operations
gix = "0.63"

# Database
rocksdb = "0.24"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# NFS server (kept for potential future use)
nfsserve = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1"
libc = "0.2.180"

# Daemon support
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }

# File watching
notify = "6.1"
rand = "0.9.2"
glob = "0.3.3"
which = "8.0.0"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"

[[bin]]
name = "vibe"
path = "src/main.rs"

[[bin]]
name = "vibed"
path = "src/bin/vibed.rs"
